Responsive Email Form: Submit button spacing fixed for small mobile.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -194,9 +194,6 @@
 	}
 	#contact form #form_submit {
 		font-size: 14px;
-		line-height: 1.3em;
-		margin-top: 1.3em;
-		margin-bottom: 0;
 	}
 }
 @media only screen and (min-width: 600px) and (max-width: 899px) and (orientation: landscape){
